RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/09_0005/09_merged.txt
/home/dimpling/AutoSpec/out/09_0005/09_merged.c:45:3: error: unterminated comment
   45 |   /* First loop */;
      |   ^
